Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35559

"munmap_chunk(): invalid pointer" when starting en new cluster

    XMLWordPrintable

Details

    • Can result in hang or crash

    Description

      We have a stand-alone server and are trying to create a cluster. When starting the cluster with `galera_new_cluster` we get this error:

      Dec 03 09:42:25 db03 mariadbd[39214]: munmap_chunk(): invalid pointer
      Dec 03 09:42:25 db03 mariadbd[39214]: 241203 9:42:25 [ERROR] mysqld got signal 6 ;

      We are able to reproduce the error by doing a fresh install of MariaDB 10.11, restoring a production dump and adding the cluster-config. Then starting the cluster will show this error.

      Attachments

        1. 51-server-local.cnf
          0.4 kB
        2. 61-galera.cnf
          0.5 kB
        3. galera_new_cluster.log
          21 kB
        4. n1.cnf
          1 kB

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            BenMesman Ben Mesman
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.