Refs codership/galera-bugs#1069 Crash in gcache::MemStore::seqno_reset()

Fix internal gcache::MemStore::allocd_ container to store pointers
to BufferHeader as it does instead of void* to avoid confusion and
wrong ptr2BH casting.

MariaDB tracker MDEV-35559